--- a/index.html
+++ b/index.html
@@ -74,19 +74,18 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>The First marketing platform tailored to increase customer ACQUISITION, FREQUENCY & SPENDING.</h1>
+                            <h1>The easiest way to make night plans! </h1>
                             <a href="#features" class="btn btn-outline btn-xl page-scroll">Our Products and Services! </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-5">
+                <div class="col-md-4">
                     <div class="device-container">
                         <div class="device-mockup iphone6_plus portrait white">
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
-                                </div>
+                                    <img src="img/scrennshot.png" class="img-responsive" alt=""> </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
@@ -102,8 +101,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
+                    <h2 class="section-heading">Coming Soon !</h2>
+                    <p>Our app will be available very soon on any mobile device! </p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -131,7 +130,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
+                                    <img src="img/scrennshot.png" class="img-responsive" alt=""> </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
@@ -144,81 +143,102 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Mobile App</h3>
-                                    <p class="text-muted">A free mobile app that connects users to local establishments to find daily deals, friends to group up with, loyalty rewards, and bar information.</p>
+                                    <i class="icon-magnifier text-primary"></i>
+                                    <h3>Find Deals</h3>
+                                    <p class="text-muted"> Locate popular bars daily that offer you deals for your business.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-graph text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Say something about how bar ownner can manage their bussiness easily and increase their profit </p>
+                                    <i class="icon-plus text-primary"></i>
+                                    <h3>Make Plans</h3>
+                                    <p class="text-muted">Make quick night plans with friends and no confusion.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <i class="icon-badge text-primary"></i>
+                                    <h3>Earn Rewards </h3>
+                                    <p class="text-muted">Earn Rewards – Receive discounts and deals when you arrive to an establishment.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-users text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <i class="icon-present text-primary"></i>
+                                    <h3>Free to Use</h3>
+                                    <p class="text-muted"> Get the app for free !</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <section class="cta">
         <div class="cta-content">
             <div class="container">
                 <h2>Stop waiting.<br>Start building.</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+                <!--<a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>-->
             </div>
         </div>
         <div class="overlay"></div>
     </section>
 
-    <section id="contact" class="contact bg-primary">
+    <section id="contact" class="features">
         <div class="container">
-            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
-            <ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-            </ul>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2> Contact Us </h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-envelope text-primary"></i>
+                                    <h3>Email us at </h3>
+                                    <p class="text-muted"> contact@raisethebarapp.com</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-call-end text-primary"></i>
+                                    <h3>Call us at</h3>
+                                    <p class="text-muted"> +1 (317) 557-9236 <br>
+                                      +1 (317) 514-1051 </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
-            <ul class="list-inline">
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-                <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-            </ul>
+            <p>&copy; 2016 Raise The Bar.</p>
+            <!--<ul class="list-inline">-->
+                <!--<li>-->
+                    <!--<a href="#">Privacy</a>-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href="#">Terms</a>-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href="#">FAQ</a>-->
+                <!--</li>-->
+            <!--</ul>-->
         </div>
     </footer>
 
